--- a/index.html
+++ b/index.html
@@ -20,19 +20,29 @@
     </div>
     <div class="row secccion">
         <section class="col-lg-8 col-md-6 col-sm-12 section">
-            <h2>section</h2>
-            <article class="col-lg-7 col-md-5 col-sm-11 article">
-                <h2>article</h2>
+            <article class="col-lg-8 col-md-5 col-sm-11 article">
+                <h3>Color in my moods (my moods)
+                    No blues (blues)
+                    Your violets on horizons
+                    Forgot my screws (my screws)
+                    My booze (shh)
+                    My love brings all the lions
+                    I don't assume that you knew (hey)
+                    That I miss you when it's quiet
+                    Oh, it's true, I want you (it's getting dark)
+                    To tell me if I'm lying
+                    Oh, I just came back from the moon
+                    Found the lightning coming from your 눈
+                    Violins holding onto your tune
+                    My moods... </h3>
             </article>
         </section>
-    </div>
-    <div class="asid">
-        <aside class="col-lg-4 col-md-6 col-sm-12">
+        <aside class="col-lg-4 col-md-6 col-sm-12 aside">
             <h2>aside</h2>
         </aside>
     </div>
     <div class="row pie">
-        <footer class="col-lg-12 col-md-12 col-sm-12">
+        <footer class="col-lg-12 col-md-12 col-sm-12 foother">
             <h2>footer</h2>
         </footer>
     </div>
