--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="row pie">
         <footer class="col-lg-12 col-md-12 col-sm-12 foother">
-            <h2>footer</h2>
+            <h2>footer gg</h2>
         </footer>
     </div>
 
