--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
   <body>
     <div class="row cabeza">
         <div class="col-lg-12 col-md-12 col-sm-12 header">
-            <h2>header</h2>
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/carr01.png" class="d-block w-100" alt="">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/carr02.png" class="d-block w-100" alt="">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/carr03.png" class="d-block w-100" alt="">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </div>
     </div>
     <div class="row nave">
